--- a/mservices/index.html
+++ b/mservices/index.html
@@ -34,7 +34,7 @@
     <header>
         <nav class="navbar">
             <div class="nav-brand">
-                <a href="#" class="nav-brand-text"><span>M Services | Electrical contractor</span> <i
+                <a href="#home" class="nav-brand-text"><span>M Services | Electrical contractor</span> <i
                         class="far fa-lightbulb text-danger"></i></a>
             </div>
             <label for="check" id="check-btn">
@@ -109,12 +109,10 @@
                         <h1 class="display-1">Civil Works</h1>
                         <p>
                             We offer our expertise in renovation & partitioning works.
-                            Construction, Testing and Commissioning Medium Voltage (MV) Transmission
-                            and Low Voltage (LV) Power Distribution Lines (Overhead & Underground).
                         </p>
                     </div>
-                    <div class="civil-img" data-aos="fade-up" data-aos-delay="100">
-                        <img src="assets/img/42.jpg" alt="" class="img-fluid">
+                    <div class="civil-img" data-aos="fade-left" data-aos-delay="100">
+                        <img src="assets/img/24.jpg" alt="" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -132,7 +130,6 @@
                         <p>
                             We do supply, install, testing and commissioning of renewable energy system
                             (solar energy).
-                            Design and Installation of Lightning Protection Schemes.
                         </p>
                     </div>
                 </div>
@@ -176,7 +173,7 @@
         <!-- Testimonials -->
         <section id="testimonials">
             <div class="container">
-                <h1 class="display-1">Testimonials</h1>
+                <h1 class="display-1" data-aos="fade-right" data-aos-delay="100">Testimonials</h1>
                 <div class="row flex even-columns pt-2">
                     <div class="card">
                         <i class="fas fa-quote-left"></i>
@@ -235,11 +232,11 @@
                                 <i class="fas fa-star text-warning"></i>
                                 <i class="fas fa-star text-warning"></i>
                                 <i class="fas fa-star text-warning"></i>
-                                <i class="far fa-star text-warning"></i>
-                                <i class="far fa-star text-warning"></i>
+                                <i class="fas fa-star text-warning"></i>
+                                <i class="fas fa-star text-warning"></i>
                             </div>
                         </div>
-                        <small>- Graphics Designer, Qlicue Agency</small>
+                        <small>- Graphics Designer, Qlicue Digital Agency</small>
                     </div>
                 </div>
             </div>
@@ -248,7 +245,7 @@
         <!-- Partners -->
         <section id="partners" class="bg-white">
             <div class="container">
-                <h1 class="display-4">Partiners</h1>
+                <h1 class="display-4" data-aos="fade-right" data-aos-delay="100">Partiners</h1>
                 <div class="row flex pt-3">
                     <div class="partner"><a href="http://www.tanesco.co.tz" target="_blank"
                             rel="noopener noreferrer"><img src="assets/img/partner/partner1.png" alt="partner"></a>
@@ -269,8 +266,10 @@
         <div class="container">
             <div class="row even-columns">
                 <div class="col">
-                    <h1 class="display-4">M Services | Electrical contractor <i
-                            class="far fa-lightbulb text-danger"></i></h1>
+                    <h1 class="display-4">
+                        M Services | Electrical contractor <i class="far fa-lightbulb text-danger"></i>
+                    </h1>
+                    <a href="tel:+255 713 500 365" class="btn btn-call">Call Us Now</a>
                 </div>
                 <div class="col">
                     <h3>
