--- a/mservices/pages/contact.html
+++ b/mservices/pages/contact.html
@@ -34,7 +34,7 @@
     <header>
         <nav class="navbar">
             <div class="nav-brand">
-                <a href="#" class="nav-brand-text"><span>M Services | Electrical contractor</span> <i
+                <a href="#home" class="nav-brand-text"><span>M Services | Electrical contractor</span> <i
                         class="far fa-lightbulb text-danger"></i></a>
             </div>
             <label for="check" id="check-btn">
@@ -123,16 +123,10 @@
 
         <!-- Location -->
         <section id="location" class="bg-white">
-            <div class="container">
-                <h1 class="display-1">Location</h1>
-                <div class="row flex even-columns pt-2">
-                    <div class="card">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3962.2350144609795!2d39.16009021471938!3d-6.741161795126836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x185c4f2f2bd65d61%3A0x40308932f8b3834f!2sGoba%20Njia%20Nne%20BUS%20STAND!5e0!3m2!1sen!2stz!4v1627738859089!5m2!1sen!2stz"
-                            allowfullscreen="" loading="lazy" title="map"></iframe>
-                    </div>
-                </div>
-            </div>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3962.2350144609795!2d39.16009021471938!3d-6.741161795126836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x185c4f2f2bd65d61%3A0x40308932f8b3834f!2sGoba%20Njia%20Nne%20BUS%20STAND!5e0!3m2!1sen!2stz!4v1627738859089!5m2!1sen!2stz"
+                allowfullscreen="" loading="lazy" title="map">
+            </iframe>
         </section>
     </main>
 
@@ -141,8 +135,10 @@
         <div class="container">
             <div class="row even-columns">
                 <div class="col">
-                    <h1 class="display-4">M Services | Electrical contractor <i
-                            class="far fa-lightbulb text-danger"></i></h1>
+                    <h1 class="display-4">
+                        M Services | Electrical contractor <i class="far fa-lightbulb text-danger"></i>
+                    </h1>
+                    <a href="tel:+255 713 500 365" class="btn btn-call">Call Us Now</a>
                 </div>
                 <div class="col">
                     <h3>
