--- a/mservices/pages/projects.html
+++ b/mservices/pages/projects.html
@@ -34,7 +34,7 @@
     <header>
         <nav class="navbar">
             <div class="nav-brand">
-                <a href="#" class="nav-brand-text"><span>M Services | Electrical contractor</span> <i
+                <a href="#home" class="nav-brand-text"><span>M Services | Electrical contractor</span> <i
                         class="far fa-lightbulb text-danger"></i></a>
             </div>
             <label for="check" id="check-btn">
@@ -56,16 +56,16 @@
     <main>
 
 
-        <!-- Services -->
-        <section id="services">
+        <!-- Projects -->
+        <section id="projects">
             <div class="container">
                 <div class="row flex even-columns">
-                    <div class="services-text">
-                        <h1 class="display-4">Our Projects</h1>
+                    <div class="projects-text">
+                        <h1 class="display-4">Projects</h1>
                         <p>
                             What we have achieved so far
                         </p>
-                        <div class="services-social">
+                        <div class="projects-social">
                             <a href="#" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-facebook"></i>
                             </a>
@@ -81,108 +81,95 @@
             </div>
         </section>
 
-        <!-- Services Cards-->
-        <section id="services-cards" class="bg-light">
+        <!-- Projects Cards-->
+        <section id="projects-cards" class="bg-white">
             <div class="container">
-                <h1 class="display-4">Our projects</h1>
+                <h1 class="display-4">Projects</h1>
+                <div class="projects-links">
+                    <a href="#all" class="active">All</a>
+                    <a href="#all">Commercial</a>
+                    <a href="#all">Residential</a>
+                    <a href="#all">Industrial</a>
+                    <p></p>
+                </div>
                 <div class="row flex even-columns pt-3">
-                    <div class="services-statements">
-                        <div class="side-cards">
-                            <div class="card">
-                                <div class="card-img">
-                                    <div class="card-inner">
-                                        <img src="../assets/img/0.jpg" alt="" class="card-img-top img-fluid">
-                                    </div>
-                                </div>
-                                <div class="card-body">
-                                    <h4>Electrical installation</h4>
-                                    <p>
-                                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
-                                        modi explicabo nobis placeat ducimus voluptates dolore molestias facere quasi
-                                        officia suscipit ipsum, accusamus deleniti reprehenderit quae repudiandae! Vero,
-                                        ducimus.
-                                    </p>
+                    <div class="side-cards">
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-inner">
+                                    <img src="../assets/img/0.jpg" alt="" class="card-img-top img-fluid">
                                 </div>
                             </div>
-                            <div class="card">
-                                <div class="card-img">
-                                    <div class="card-inner">
-                                        <img src="../assets/img/1.jpg" alt="" class="card-img-top img-fluid">
-                                    </div>
-                                </div>
-                                <div class="card-body">
-                                    <h4>Substation construction</h4>
-                                    <p>
-                                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
-                                        modi explicabo nobis placeat ducimus voluptates dolore molestias facere quasi
-                                        officia suscipit ipsum, accusamus deleniti reprehenderit quae repudiandae! Vero,
-                                        ducimus.
-                                    </p>
+                            <div class="card-body">
+                                <h4>Electrical installation</h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-inner">
+                                    <img src="../assets/img/1.jpg" alt="" class="card-img-top img-fluid">
                                 </div>
                             </div>
-                            <div class="card">
-                                <div class="card-img">
-                                    <div class="card-inner">
-                                        <img src="../assets/img/2.jpg" alt="" class="card-img-top img-fluid">
-                                    </div>
-                                </div>
-                                <div class="card-body">
-                                    <h4>Renewable energy</h4>
-                                    <p>
-                                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
-                                        modi explicabo nobis placeat ducimus voluptates dolore molestias facere quasi
-                                        officia suscipit ipsum, accusamus deleniti reprehenderit quae repudiandae! Vero,
-                                        ducimus.
-                                    </p>
+                            <div class="card-body">
+                                <h4>Substation construction</h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-inner">
+                                    <img src="../assets/img/2.jpg" alt="" class="card-img-top img-fluid">
                                 </div>
                             </div>
-                            <div class="card">
-                                <div class="card-img">
-                                    <div class="card-inner">
-                                        <img src="../assets/img/3.jpg" alt="" class="card-img-top img-fluid">
-                                    </div>
-                                </div>
-                                <div class="card-body">
-                                    <h4>Civil works</h4>
-                                    <p>
-                                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
-                                        modi explicabo nobis placeat ducimus voluptates dolore molestias facere quasi
-                                        officia suscipit ipsum, accusamus deleniti reprehenderit quae repudiandae! Vero,
-                                        ducimus.
-                                    </p>
+                            <div class="card-body">
+                                <h4>Renewable energy</h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-inner">
+                                    <img src="../assets/img/3.jpg" alt="" class="card-img-top img-fluid">
                                 </div>
                             </div>
-                            <div class="card">
-                                <div class="card-img">
-                                    <div class="card-inner">
-                                        <img src="../assets/img/4.jpg" alt="" class="card-img-top img-fluid">
-                                    </div>
-                                </div>
-                                <div class="card-body">
-                                    <h4>Lighting</h4>
-                                    <p>
-                                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
-                                        modi explicabo nobis placeat ducimus voluptates dolore molestias facere quasi
-                                        officia suscipit ipsum, accusamus deleniti reprehenderit quae repudiandae! Vero,
-                                        ducimus.
-                                    </p>
+                            <div class="card-body">
+                                <h4>Civil works</h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-inner">
+                                    <img src="../assets/img/4.jpg" alt="" class="card-img-top img-fluid">
                                 </div>
                             </div>
-                            <div class="card">
-                                <div class="card-img">
-                                    <div class="card-inner">
-                                        <img src="../assets/img/5.jpg" alt="" class="card-img-top img-fluid">
-                                    </div>
+                            <div class="card-body">
+                                <h4>Lighting</h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-inner">
+                                    <img src="../assets/img/5.jpg" alt="" class="card-img-top img-fluid">
                                 </div>
-                                <div class="card-body">
-                                    <h4>Renovation restoration</h4>
-                                    <p>
-                                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
-                                        modi explicabo nobis placeat ducimus voluptates dolore molestias facere quasi
-                                        officia suscipit ipsum, accusamus deleniti reprehenderit quae repudiandae! Vero,
-                                        ducimus.
-                                    </p>
-                                </div>
+                            </div>
+                            <div class="card-body">
+                                <h4>Renovation restoration</h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -196,8 +183,10 @@
         <div class="container">
             <div class="row even-columns">
                 <div class="col">
-                    <h1 class="display-4">M Services | Electrical contractor <i
-                            class="far fa-lightbulb text-danger"></i></h1>
+                    <h1 class="display-4">
+                        M Services | Electrical contractor <i class="far fa-lightbulb text-danger"></i>
+                    </h1>
+                    <a href="tel:+255 713 500 365" class="btn btn-call">Call Us Now</a>
                 </div>
                 <div class="col">
                     <h3>
