--- a/mservices/pages/services.html
+++ b/mservices/pages/services.html
@@ -34,7 +34,7 @@
     <header>
         <nav class="navbar">
             <div class="nav-brand">
-                <a href="#" class="nav-brand-text"><span>M Services | Electrical contractor</span> <i
+                <a href="#home" class="nav-brand-text"><span>M Services | Electrical contractor</span> <i
                         class="far fa-lightbulb text-danger"></i></a>
             </div>
             <label for="check" id="check-btn">
@@ -84,7 +84,7 @@
         <!-- Services Cards-->
         <section id="services-cards" class="bg-light">
             <div class="container">
-                <h1 class="display-4">Our Services</h1>
+                <h1 class="display-4">What We Do</h1>
                 <div class="row flex even-columns pt-3">
                     <div class="services-statements">
                         <div class="side-cards">
@@ -99,8 +99,6 @@
                                     <p>
                                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
                                         modi explicabo nobis placeat ducimus voluptates dolore molestias facere quasi
-                                        officia suscipit ipsum, accusamus deleniti reprehenderit quae repudiandae! Vero,
-                                        ducimus.
                                     </p>
                                 </div>
                             </div>
@@ -115,8 +113,6 @@
                                     <p>
                                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
                                         modi explicabo nobis placeat ducimus voluptates dolore molestias facere quasi
-                                        officia suscipit ipsum, accusamus deleniti reprehenderit quae repudiandae! Vero,
-                                        ducimus.
                                     </p>
                                 </div>
                             </div>
@@ -131,8 +127,6 @@
                                     <p>
                                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
                                         modi explicabo nobis placeat ducimus voluptates dolore molestias facere quasi
-                                        officia suscipit ipsum, accusamus deleniti reprehenderit quae repudiandae! Vero,
-                                        ducimus.
                                     </p>
                                 </div>
                             </div>
@@ -147,8 +141,6 @@
                                     <p>
                                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
                                         modi explicabo nobis placeat ducimus voluptates dolore molestias facere quasi
-                                        officia suscipit ipsum, accusamus deleniti reprehenderit quae repudiandae! Vero,
-                                        ducimus.
                                     </p>
                                 </div>
                             </div>
@@ -163,8 +155,6 @@
                                     <p>
                                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
                                         modi explicabo nobis placeat ducimus voluptates dolore molestias facere quasi
-                                        officia suscipit ipsum, accusamus deleniti reprehenderit quae repudiandae! Vero,
-                                        ducimus.
                                     </p>
                                 </div>
                             </div>
@@ -179,8 +169,6 @@
                                     <p>
                                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae voluptatibus
                                         modi explicabo nobis placeat ducimus voluptates dolore molestias facere quasi
-                                        officia suscipit ipsum, accusamus deleniti reprehenderit quae repudiandae! Vero,
-                                        ducimus.
                                     </p>
                                 </div>
                             </div>
@@ -196,8 +184,10 @@
         <div class="container">
             <div class="row even-columns">
                 <div class="col">
-                    <h1 class="display-4">M Services | Electrical contractor <i
-                            class="far fa-lightbulb text-danger"></i></h1>
+                    <h1 class="display-4">
+                        M Services | Electrical contractor <i class="far fa-lightbulb text-danger"></i>
+                    </h1>
+                    <a href="tel:+255 713 500 365" class="btn btn-call">Call Us Now</a>
                 </div>
                 <div class="col">
                     <h3>
